app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rollouts-demo
  annotations:
    haproxy.router.openshift.io/disable_cookies: 'true'
    haproxy.router.openshift.io/balance: roundrobin
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rollouts-demo
    weight: 100
  alternateBackends:
    - kind: Service
      name: canary
      weight: 0
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: canary
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: canary
